01-cloud-provider-kind-setup-with-gw-api/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-web
  template:
    metadata:
      labels:
        app: sample-web
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-web-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sample-web
